--- a/Proiect/orders/pom.xml
+++ b/Proiect/orders/pom.xml
@@ -48,6 +48,12 @@
 			<version>2.8.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
